# Sports-Data-Ingestion-Pipeline

./: .dockerignore  .env.example  .gitignore  .last-sync  .pre-commit-config.yaml  .specify  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Dockerfile  ERD.md  README.md  data flows.md  docker-compose.prod.yml  docker-compose.remote.yml  docker-compose.signoz.yml  docker-compose.yml  otel-collector-config.yaml  pyproject.toml  workspace.yaml
.agents/: mcp.json
.agents/skills/: README.md  _shared  architecture-processor  bootstrap  code-architecture-review  feature  git-sync-extractor  implementor  improvement-review  investigation  missing-specification  plan  self-learn  specification  speckit-analyze  (+7 more)
.specify/: feature.json
architecture/: README.md  c3_data_platform_components.md  football-data-ingestion.md
notebooks/: completed_matches.ipynb  data_inventory.ipynb  explore.ipynb  matchbook_odds_lookup.ipynb
scripts/: migrate_matchbook_bronze.py  run_duckdb_ui.py  start_duckdb_ui.py
specs/: 001-football-data-bronze-ingestion-plan.md  001-football-data-bronze-ingestion-specification.md  001-matchbook-ingestor-migration-plan.md  001-matchbook-ingestor-migration-specification.md  002-ducklake-ui-plan.md  002-ducklake-ui-specification.md  002-espn-ingestion-plan.md  002-espn-ingestion-specification.md  003-ducklake-model-migration-plan.md  003-ducklake-model-migration-specification.md  004-matchbook-events-bronze-plan.md  004-matchbook-events-bronze-specification.md  004-platform-foundation-and-deployment-topology-specification.md  005-matchbook-odds-ingestion-specification.md  006-matchbook-espn-conform-plan.md  006-matchbook-espn-conform-specification.md  007-duckdb-lakehouse-catalogue-mcp-plan.md  007-duckdb-lakehouse-catalogue-mcp-specification.md  008-completed-matches-gold-layer-plan.md  008-completed-matches-gold-layer-specification.md  009-postgres-historic-migration-specification.md  010-canonical-provider-link-tables-specification.md  011-dbt-layer-restructure-staging-intermediate-marts-specification.md  README.md
streamlit_app/: matchbook_exceptions.py
telemetry/: README.md  claude-otel.env
tests/: conftest.py  test_config_ducklake.py  test_config_matchbook.py  test_config_seed_paths.py  test_dbt_translator.py  test_definitions.py  test_docker_compose.py  test_duckdb_version.py  test_harness_smoke.py  test_no_future_annotations.py  test_streamlit_ui.py
user_stories/: 1.json  2.json  new-implement-football-extra-bronze-ingestion-and-validation-path.json  new-implement-football-main-bronze-ingestion-and-validation-path.json
(+419 files in other folders)
